# fastapi-production-backend

./: .gitignore  README.md  alembic.ini  app.db  datafile.txt  dev.db  pyproject.toml
alembic/: env.py
alembic/versions/: 3f225d983348_second_commit_to_alembic.py  73843b9378e1_add_user_table_columns.py  99dc46071107_update_test_one.py  af54e730c2af_updated_the_db_with_the_defaults_in_.py
app/: main.py
app/core/: db.py  dependencies.py  security.py
app/core/_db/: base.py
app/core/interfaces/: user_repository.py
app/infrastructure/sql/: user_repo.py
app/modules/auth/: models.py  router.py  schemas.py  service.py
app/modules/auth/api/: get_users.py  login.py  me.py  register.py  test_register.py
app/modules/blog/: routes.py
app/modules/test_service/: routes.py
app/modules/test_service/api/: blog.py
