[project]
name = "jksuperapp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "fastapi[all]>=0.128.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
]
